--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^7.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
@@ -21,8 +22,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@babel/preset-react": "^7.24.7",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
