--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0"
