--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-spinners": "^0.14.1",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
