--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "css-loader": "^7.1.2",
+    "d3-ease": "^3.0.1",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
